--- a/src/assets/scss/_custom_fromAvenir.scss
+++ b/src/assets/scss/_custom_fromAvenir.scss
@@ -953,6 +953,11 @@ div.collapse .card-header:hover {
         .input-select-items .form-group .form-control .view_option{
             color: var(--sidebar-activecolor);
         }
+
+
+        .vue-treeselect__input{
+            color: var(--text-color);
+        }
     }
 
 
