--- a/src/assets/scss/_footer.scss
+++ b/src/assets/scss/_footer.scss
@@ -37,6 +37,10 @@
         font-size: 14px;
     }
 
+    .vue-treeselect__input{
+        color: var(--text-color);
+    }
+
 }
 
 .footer-home-div {
