--- a/src/assets/scss/_sidebarNew.scss
+++ b/src/assets/scss/_sidebarNew.scss
@@ -167,7 +167,7 @@
     .follow-us {
    
       font-size: 14px !important;
-      color: var(--main-font-color);
+      color: var(--text-color);
       
       .fb-icon,
       .tweet-icon {
