--- a/src/assets/scss/_ancModal.scss
+++ b/src/assets/scss/_ancModal.scss
@@ -1,6 +1,6 @@
 #modal-anc{
 
-    padding-top: 36px;
+    padding-top: 12%;
     background-color: var(--bg-main-color) !important;
    
     .modal-title {
@@ -16,7 +16,7 @@
     }
 
     .modal-content {
-        background-color: var(--bg-main-color);
+        background-color: var(--bg-main-color) !important;
         color           : var(--fonts-white-shade);
         border-right: 1px solid transparent !important;
         border-radius: 0 !important;
@@ -301,6 +301,8 @@
 	z-index: 9999 !important;
 }
 
+
+
 #modal-newanc {
 
     
@@ -365,6 +367,8 @@
 }
 
 .modal-newac {
+
+   
 
     .border-greytheme{
         height: 97% !important;
