--- a/src/assets/scss/_summarysection.scss
+++ b/src/assets/scss/_summarysection.scss
@@ -7,7 +7,7 @@
 	overflow-y: auto;
 	overflow-x: hidden;
 	border-radius: 10px;
-  	margin-top: 55px !important;
+  	// margin-top: 55px !important;
 
 	.indicator-name{
 		overflow: hidden;
@@ -134,7 +134,6 @@
 }
 
 @media (min-width: 1366px) {
-	.summary,
 	.anc {
 		margin-left: 250px !important;
 		margin-top: 59px;
