--- a/src/assets/scss/newcss.scss
+++ b/src/assets/scss/newcss.scss
@@ -29,9 +29,9 @@
     margin-top: 92px !important;
 }
 
-.analytic-page .analytic #scrollTop{
-    margin-top: 100px !important;
-}
+// .analytic-page .analytic #scrollTop{
+//     margin-top: 0px !important;
+// }
 
 }
 
@@ -1141,17 +1141,17 @@ border: 1px solid var(--footer-components-color ) !important;
 }
 
 
-.question-answer input[type='radio']:disabled:after {
-    width: 13px;
-    height: 13px;
+.question-answer input[type='radio'][data-selected="true"]:disabled:after {
+    width: 9px;
+    height: 9px;
     border-radius: 15px;
-    top: -2px;
-    left: 0px;
+    top: -4px;
+    left: 2px;
     position: relative;
-    background-color: var(--sidebar-main-active-color);
+    background-color: #005CC8 !important;
     content: '';
     display: inline-block;
     visibility: visible;
-    border: 2px solid var(--border-grey-color);
+    // border: 2px solid var(--border-grey-color);
 }
 
