feature updates and bug fixes

--- a/src/assets/scss/_avenirTheme.scss
+++ b/src/assets/scss/_avenirTheme.scss
@@ -53,7 +53,7 @@ table thead th{
 
 .typeDropdown{
     background-color: var(--sidebar-main-active-color) !important;
-    border-color: var(--sidebar-main-active-color) !important;
+    border-color: var(--border-grey-color) !important;
     color: var(--text-color)!important;
 }
 
