--- a/src/assets/scss/_custom_fromAvenir.scss
+++ b/src/assets/scss/_custom_fromAvenir.scss
@@ -963,6 +963,9 @@ div.collapse .card-header:hover {
 
 }
 
+.vue-treeselect__input{
+    color: var(--text-color);
+}
 
 .bottom-tabbar .dropdown-toggle:after {
     display: none;
