--- a/src/assets/scss/_sumDqr.scss
+++ b/src/assets/scss/_sumDqr.scss
@@ -30,7 +30,7 @@
             color: var(--innertext-font-color) !important;
             font-size: var(--font-size-p-normal-text);
             border-radius: 7px !important;
-            border: 1px solid var(--footer-components-color) !important;
+            border: 1px solid var(--border-grey-color) !important;
             opacity: 1;
           
            .quality-text{
